# Rust_Transformers

./: Cargo.toml  README.md
src/: main.rs
src/core/: activation.rs  layer.rs  mod.rs  tensor.rs
src/training/: dataloader.rs  loss.rs  metrics.rs  mod.rs  optimizer.rs
src/transformer/: attention.rs  embedding.rs  feedforward.rs  mod.rs  transformer_block.rs
