[package]
name = "rust_transformers"
version = "0.1.0"
edition = "2024"
description = "Une implémentation puissante et modulaire de transformeurs en Rust"
license = "MIT"
repository = "https://github.com/rustnew/Rust_Transformers"
keywords = ["transformer", "ai", "machine-learning", "neural-network"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = "0.17.1"
ndarray-rand = "0.15.0"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
serde = {version ="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
